k8s/all/ingress-traefik/traefik-Serv-Depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - name: traefik
        image: traefik:v2.7
        args:
        - --entrypoints.web.address=:80
        - --providers.kubernetesingress
        ports:
        - name: web
          containerPort: 80
      
      serviceAccountName: traefik-ingress-controller


---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - protocol: TCP
    port: 80
    name: web
    targetPort: 80
