k8s/all/ingress-traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-traeik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: connectora.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectora
            port:
              number: 8080
  - host: connectorb.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectorb
            port:
              number: 8081
